ChangeLog 'ClusteringSuite'

YYYY-MM-DD  John Doe  <johndoe@example.com>

	* myfile.ext (myfunction): my changes made
	additional changes

	* myfile.ext (unrelated_change): my changes made
	to myfile.ext but completely unrelated to the above

	* anotherfile.ext (somefunction): more changes

2011-11-22 German Llort <german.llort@bsc.es>
	* Makefiles in TreeDBSCAN changed to generated static binaries

	* Tree_DBSCAN_env.sh now sets the ClusteringSuite libraries directory in the LD_LIBRARY_PATH

2011-11-22 German Llort <german.llort@bsc.es>
	* TreeDBSCAN MRNet protocol separated into 3 independent libraries
	for external use (lib*TreeDBSCAN)

	* Serialization and transmission of convex hulls over the MRNet
	centralized in HullManager.cpp

	* Added on-line back-end that extracts data from a tracing library

	* Modified 'clustering-config' script

2011-11-21 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Changed the name of 'sourceme.sh' to 'Tree_DBSCAN_env.sh'

	* Added 'EXTRA_DIST' to 'clustering-config' script

	* Minor version incresed to '2'

2011-11-21 German Llort <german.llort@bsc.es>
	* Added 'clustering-config' script

2011-11-21 German Llort <german.llort@bsc.es>
	* Added 'substitute' and 'substitute-all' scripts

2011-11-21 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Added 'TreeDBSCAN' source tree.

	* Erased 'doc' source tree. To be restored in future versions

2011-11-21 German Llort <german.llort@bsc.es>
	* Modified autogen-mn.sh

	* Erased configure.ac and aclocal.m4 

2011-11-21 Juan Gonzalez <juan.gonzalez@bsc.es>
	* Added 'TreeDBSCAN' source code that implements a tree version
	approach to parallelize DBSCAN using the MRNet infrastructure

	* Added a CGAL kernel (obtained from the CGAL examples) to include
	density information to CGAL points. The points contained in this
	kernel are still bidimensional. To avoid a problem of CGAL when
	determining the polygon intersection algorithnm this points
	contain a vector of 'float' instead of 'double. That could be a